polymorphism and templates exercises done

--- a/raygame/raygame.vcxproj
+++ b/raygame/raygame.vcxproj
@@ -131,17 +131,25 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Barbarian.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MasterTile.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Tile.cpp" />
+    <ClCompile Include="Wizard.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Barbarian.h" />
     <ClInclude Include="Button.h" />
+    <ClInclude Include="gameObject.h" />
+    <ClInclude Include="MinMax.h" />
     <ClInclude Include="MasterTile.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="Tile.h" />
+    <ClInclude Include="Wizard.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\resources\mappack\PNG\mapTile_017.png" />
