--- a/raygame/raygame.vcxproj
+++ b/raygame/raygame.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClCompile Include="Barbarian.cpp" />
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="DialFace.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="EvilEnt.cpp" />
     <ClCompile Include="main.cpp" />
@@ -146,6 +147,7 @@
   <ItemGroup>
     <ClInclude Include="Barbarian.h" />
     <ClInclude Include="Button.h" />
+    <ClInclude Include="DialFace.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="EvilEnt.h" />
     <ClInclude Include="gameObject.h" />
