Dynasmic arrays practice

--- a/raygame/raygame.vcxproj
+++ b/raygame/raygame.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="Tile.h" />
+    <ClInclude Include="tVector.h" />
     <ClInclude Include="Wizard.h" />
   </ItemGroup>
   <ItemGroup>
