--- a/raygame/raygame.vcxproj.filters
+++ b/raygame/raygame.vcxproj.filters
@@ -95,6 +95,12 @@
     <ClInclude Include="tVector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="tStack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="tForwardList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="mapTile_188.png">
